base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qcon-api
  labels:
    app: qcon-api
spec:
  type: NodePort
  selector:
    app: qcon-api
  ports:
  - port: 8000
    targetPort: 8000
